# graphql-ambassador

./: .gitignore  README.md  pyproject.toml
graphql_ambassador/: __init__.py  config.py  proxy.py  wsgi.py
tests/: test_graphql_ambassador.py
