[tool.poetry]
name = "graphql-ambassador"
version = "0.1.0"
description = ""
authors = ["David Buckley <buckley.w.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
graphene = "^2.1"
flask = "^1.0"
requests = "^2.19"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.610.0"
pytest-cov = "^2.5"
pylint = "^1.9"
